<?xml version="1.0"?>
<package format="2">
  <name>rxros</name>
  <version>0.1.0</version>
  <description>The RxROS package</description>

  <maintainer email="wasowski@itu.dk">Andrzej Wasowski</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="henrik7264@outlook.com">Henrik Larsen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
